--- a/_posts/随便写写.md
+++ b/_posts/随便写写.md
@@ -1,3 +1,11 @@
+---
+layout: post
+title: "随便写写"
+excerpt: "随笔"
+date: 2018-08-26
+comments: true
+---
+
 >###关于电影
 
 **今天早上收拾完行李，没什么事，看了这部早已在iPad中下载好并封存多时的电影，之前听说是奥斯卡大片就在网上下在了平板里，可能一直对这种探索人性的比较深刻的影片有些抗拒心理，一直没有观看，之前的一部《拯救大兵瑞恩》，也是斯皮尔伯格拍的，就让我几天才平静下来。**
