--- a/_posts/2018-08-20-post2.md
+++ b/_posts/2018-08-20-post2.md
@@ -6,82 +6,84 @@ date: 2018-08-20
 comments: true
 ---
 
-##1.配置Git Bash
->之前在网上看过很多关于GitHub入门的帖子，感觉写得很复杂，思路不是很清晰，弄了很久也没弄明白怎么配置的，也不知道怎样用git bash命令行实现本地与服务器的同步，今天又看了很多博客，边看边学直到配置成功。下面是GitHub入门的详细步骤。
+###1.配置Git Bash
 
-首先，我先对GitHub做一个简单的介绍，GitHub有一个很强大的功能就是，你可以在服务器端创建一个库，上面的代码可以同步到本地；或者将本地的代码通过git bash命令同步到服务器端。写代码是一件很重的任务，尤其是很多人完成一个很大的项目的时候，就十分的复杂，一群人一起来写某个项目，大家完成的时间，完成的进度都是不相同的，最后怎么才能将大家的代码轻松的汇总起来呢？这样我们就用到了GitHub这个平台。
+**之前在网上看过很多关于GitHub入门的帖子，感觉写得很复杂，思路不是很清晰，弄了很久也没弄明白怎么配置的，也不知道怎样用git bash命令行实现本地与服务器的同步，今天又看了很多博客，边看边学直到配置成功。下面是GitHub入门的详细步骤。**
 
-我们在GitHub服务器上有一个主仓库，这里用来储存你的所有代码，如果不付费的话是所有人都可以看的，如果你不想让别人看到你的代码，可以选择付费仓库。我们创建了主仓库之后，就可以在电脑上创建分支，之后你就可以在电脑上完成自己的代码，写完之后直接同步在电脑的分支，当你认为可以上传的自己的主仓库时，就可以申请更新，当通过审核的时候，你代码就出现在了自己的主仓库中，这样全世界的程序员都可以查看你的代码。
+**首先，我先对GitHub做一个简单的介绍，GitHub有一个很强大的功能就是，你可以在服务器端创建一个库，上面的代码可以同步到本地；或者将本地的代码通过git bash命令同步到服务器端。写代码是一件很重的任务，尤其是很多人完成一个很大的项目的时候，就十分的复杂，一群人一起来写某个项目，大家完成的时间，完成的进度都是不相同的，最后怎么才能将大家的代码轻松的汇总起来呢？这样我们就用到了GitHub这个平台。**
 
-全世界现在已经有300万的注册用户，甚至还有一些相当知名的开源项目也在其中公布代码。在GitHub上你可以看到很多计算机领域的精英所分享的自己的代码。这是GitHub的两个主要优点，适合团队协作，以及下载其他优秀者的代码。
+**我们在GitHub服务器上有一个主仓库，这里用来储存你的所有代码，如果不付费的话是所有人都可以看的，如果你不想让别人看到你的代码，可以选择付费仓库。我们创建了主仓库之后，就可以在电脑上创建分支，之后你就可以在电脑上完成自己的代码，写完之后直接同步在电脑的分支，当你认为可以上传的自己的主仓库时，就可以申请更新，当通过审核的时候，你代码就出现在了自己的主仓库中，这样全世界的程序员都可以查看你的代码。**
+
+**全世界现在已经有300万的注册用户，甚至还有一些相当知名的开源项目也在其中公布代码。在GitHub上你可以看到很多计算机领域的精英所分享的自己的代码。这是GitHub的两个主要优点，适合团队协作，以及下载其他优秀者的代码。**
 
 ![GitHub首页](https://upload-images.jianshu.io/upload_images/3193147-8348124b8a783aff.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-这是GitHub的官方网站，网页是全英文，在上面注册自己的账号。英语不好的同学可以使用谷歌浏览器，可以翻译网页内容。
+**这是GitHub的官方网站，网页是全英文，在上面注册自己的账号。英语不好的同学可以使用谷歌浏览器，可以翻译网页内容。**
 
 ![谷歌浏览器的注册页面](https://upload-images.jianshu.io/upload_images/3193147-212a922e3c04e5f2.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
- 在注册完成之后，完成一些简单的设置之后，你需要创建一个属于自己的库。
+**在注册完成之后，完成一些简单的设置之后，你需要创建一个属于自己的库。**
 
 ![](https://upload-images.jianshu.io/upload_images/3193147-ab055f6640ea7025.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-第一个文本框是给库起的名字，第二个文本框是对库的一个描述。在创建完成自己的库之后，下面就要让自己的电脑克隆一个自己所创建的库，方面自己电脑上的代码同步到GitHub你所创建的库当中。为了实现，就需要安装一个软件，Git Bash。（适合windows）网址：https://gitforwindows.org/   安装过程中除了自定义安装路径，其它全点next即可。
+**第一个文本框是给库起的名字，第二个文本框是对库的一个描述。在创建完成自己的库之后，下面就要让自己的电脑克隆一个自己所创建的库，方面自己电脑上的代码同步到GitHub你所创建的库当中。为了实现，就需要安装一个软件，Git Bash。（适合windows）网址：https://gitforwindows.org/   安装过程中除了自定义安装路径，其它全点next即可。**
 
 **下面我对git bash配置进行详细说明：**
-1.在桌面右键鼠标，会看到Git Bash Here
+**1.在桌面右键鼠标，会看到Git Bash Here**
 ![](https://upload-images.jianshu.io/upload_images/3193147-4875245466eb6d39.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-命令行中的第一行是你的计算机的名字和型号，具体不用知道太清楚，这个是自动出来的。
+**命令行中的第一行是你的计算机的名字和型号，具体不用知道太清楚，这个是自动出来的。**
 
- 2.开始获取密钥。
+**2.开始获取密钥。**
 ![](https://upload-images.jianshu.io/upload_images/3193147-90cec29fe14bca86.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-在第二行开始输入以上代码，引号中的是你注册时的邮箱，注意空格不能省略。输入完按Enter之后会有让你确认的操作，会提示操作路径、密码等等，这个时候不要去输入，一直按Enter即可。
+**在第二行开始输入以上代码，引号中的是你注册时的邮箱，注意空格不能省略。输入完按Enter之后会有让你确认的操作，会提示操作路径、密码等等，这个时候不要去输入，一直按Enter即可。**
 
 ![](https://upload-images.jianshu.io/upload_images/3193147-235045cd0fdca375.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-当再次出现这个命令行则说明你的密钥已经成功创建。**现在只需要去在命令行中显示的 your public key has been saved in...**后面的路径用记事本打开id_rsa.pub文件，复制里面的内容。
+**当再次出现这个命令行则说明你的密钥已经成功创建。现在只需要去在命令行中显示的 your public key has been saved in...后面的路径用记事本打开id_rsa.pub文件，复制里面的内容。**
 
-3.登录到你的GitHub上添加这个密匙。
+**3.登录到你的GitHub上添加这个密匙。**
 
 ![](https://upload-images.jianshu.io/upload_images/3193147-22f8acc1575a3a40.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
 ![](https://upload-images.jianshu.io/upload_images/3193147-161a88fe3092e77f.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-打开settings，找到SSH and GPG keys选项，点击New SSH key，并把刚才复制的内容粘贴进入文本域中提交即可，若出现上述界面说明添加成功。
+**打开settings，找到SSH and GPG keys选项，点击New SSH key，并把刚才复制的内容粘贴进入文本域中提交即可，若出现上述界面说明添加成功。**
 
-4.回到git bash命令行，输入
+**4.回到git bash命令行，输入**
 ![](https://upload-images.jianshu.io/upload_images/3193147-768f8042d9298c7f.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-来检查是否成功绑定。第一次绑定的时候输入上边的代码之后会提示是否continue，在输入yes后如果出现了：You've successfully authenticated, but GitHub does not provide shell access 。那就说明，已经成功连上了GitHub。
+**来检查是否成功绑定。第一次绑定的时候输入上边的代码之后会提示是否continue，在输入yes后如果出现了：You've successfully authenticated, but GitHub does not provide shell access 。那就说明，已经成功连上了GitHub。**
 
-然后可以设置一些参数，其中**your name和你注册的名字一致，邮箱和你注册的邮箱一致**：
+**然后可以设置一些参数，其中your name和你注册的名字一致，邮箱和你注册的邮箱一致：**
 
 ![](https://upload-images.jianshu.io/upload_images/3193147-0f53cfec8016ed94.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 ![](https://upload-images.jianshu.io/upload_images/3193147-20992cd47dbaca38.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-根据你自己的需要，希望将库中的代码放在本地中的哪个盘开始定位，我是放在E盘。
+**根据你自己的需要，希望将库中的代码放在本地中的哪个盘开始定位，我是放在E盘。**
 
 ![](https://upload-images.jianshu.io/upload_images/3193147-191f91e62394f685.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
  <br/>**其中https的网址是点击仓库右边绿色按钮显示的那个网址** ![](https://upload-images.jianshu.io/upload_images/3193147-f309e7847f82ac7b.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-然后打开E盘就会发现一个名为仓库名的文件夹自动创建了，这时新建一个text.txt文件再保存。
+**然后打开E盘就会发现一个名为仓库名的文件夹自动创建了，这时新建一个text.txt文件再保存。**
 
 ![](https://upload-images.jianshu.io/upload_images/3193147-ca756307726c3d46.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-依次输入如下代码：
+**依次输入如下代码：**
 ![](https://upload-images.jianshu.io/upload_images/3193147-f03088d7cf3afb7e.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-ls的作用是查看你目前所定位的文件夹中的文件，现在可以看出来，我刚刚所创建的test文件已经出现了。git commit -m "text"  引号内的内容可以随意改动，这个语句的意思是给你刚刚上传的文件一个备注。
+**ls的作用是查看你目前所定位的文件夹中的文件，现在可以看出来，我刚刚所创建的test文件已经出现了。git commit -m "text"  引号内的内容可以随意改动，这个语句的意思是给你刚刚上传的文件一个备注。**
 
-最后输入：![](https://upload-images.jianshu.io/upload_images/3193147-bcba818255a60d3b.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
+**最后输入：**![](https://upload-images.jianshu.io/upload_images/3193147-bcba818255a60d3b.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-这时会出现一个白色的登陆框，把你的注册邮箱和登陆密码输进去登陆即可。若出现![](https://upload-images.jianshu.io/upload_images/3193147-479e7c6a09349143.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)说明登陆配置成功。
+**这时会出现一个白色的登陆框，把你的注册邮箱和登陆密码输进去登陆即可。若出现**![](https://upload-images.jianshu.io/upload_images/3193147-479e7c6a09349143.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)说明登陆配置成功。
 
-现在再打开GitHub上你创建的库，就会发现之前创建的text.txt文件已经上传成功。
+**现在再打开GitHub上你创建的库，就会发现之前创建的text.txt文件已经上传成功。**
 ![](https://upload-images.jianshu.io/upload_images/3193147-148d44aea1254de8.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
-##2.实现本地与服务器的同步
-关于同步的问题，我找了网上的一个截图，经本人验证是成功的，具体步骤如下：
+###2.实现本地与服务器的同步
+
+**关于同步的问题，我找了网上的一个截图，经本人验证是成功的，具体步骤如下：**
 ![](https://upload-images.jianshu.io/upload_images/3193147-210ce8e87487b0fa.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
