--- a/_posts/2018-08-27-post4.md
+++ b/_posts/2018-08-27-post4.md
@@ -13,9 +13,17 @@ comments: true
 
 **HashMap是一个数组+链表的实现，数组中存储了所有的头结点，每个头结点所在的一格称为一个桶，桶后面存放的每一个数据称为bin。**
 
-![](https://images2017.cnblogs.com/blog/400827/201709/400827-20170928222332684-1953396864.png)
+**HashMap由数组+链表组成，数组是HashMap的主体，当添加一个元素时，通过key计算hash值，并确定插入数组中的位置。如果插入的位置已经有元素存在，则通过equals方法进一步判断，若返回true则覆盖该位置上的Node，若返回false则添加到该元素的后面形成了链表。当链表长度太长时，链表就转换为红黑树，这样大大提高了查找的效率。**
 
-**capacity：表示HashMap中桶的数量，即数组长度，默认值为16。每一次扩容都是原来的2倍，总之，容量都是2的幂。**
+![](https://images2015.cnblogs.com/blog/1024555/201611/1024555-20161113235348670-746615111.png)
+
+**JDK 1.8 以前的HashMapd的实现是数组+链表，即使哈希函数取得再好，也很难达到元素百分百均匀分布。针对这种情况，JDK 1.8 引入了红黑树（查找时间复杂度为O(logn)）来优化这个问题，当同一个hash值的节点数不小于8时，不再采用单链表形式存储，而是采用红黑树的存储形式。**
+
+![](https://images2015.cnblogs.com/blog/249993/201707/249993-20170725102326906-1051203702.png)
+
+**类的数据成员：**
+
+**DEFAULT_INITIAL_CAPACITY：表示HashMap中桶的数量，即数组长度，默认值为16。每一次扩容都是原来的2倍，总之，容量都是2的幂。**
 	
     /**
     *The default initial capacity - MUST be a power of two.
@@ -23,7 +31,7 @@ comments: true
     static final int DEFAULT_INITIAL_CAPACITY = 1 << 4;
 
 
-**loadFactor：表示装载因子，用来衡量HashMap满的程度，其默认值为0.75f，计算装载因子的公式为：size / capacity，并非用占用桶的数量除以capacity。**
+**DEFAULT_LOAD_FACTOR：表示装载因子，用来衡量HashMap满的程度，其默认值为0.75f，计算装载因子的公式为：size / capacity，并非用占用桶的数量除以capacity。**
 
 
     /**
@@ -33,11 +41,17 @@ comments: true
 
 **threshold：threshold表示临界值，当HashMap的size大于threshold时会执行resize操作。threshold = capacity * loadFactor。**
 
-**size：表示HashMap中存放的结点总数（链表结点之和）。**
+**size：表示HashMap中存放的key-value键值对的个数。**
 
-**Entry：表示一个实体，即HashMap存储对象的实体，由key、value、hash和next组成。**
+**TREEIFY_THRESHOLD：当桶上的结点大于这个值时，链表就会转成红黑树。**
 
-**注：JDK 1.8 以前的HashMapd的实现是数组+链表，即使哈希函数取得再好，也很难达到元素百分百均匀分布。针对这种情况，JDK 1.8 引入了红黑树（查找时间复杂度为O(logn)）来优化这个问题。故以下源码分析以JDK 1.8的版本进行总结。**
+**UNTREEIFY_THRESHOLD：当桶上的结点小于这个值时，红黑树就会转回链表。**
+
+**MIN_TREEIFY_CAPACITY：桶中结构转化为红黑树对应的table的最小大小。**
+
+**transient Node<K,V>[] table：存放元素的数组，总是2的幂次倍。**
+
+**transient Set<map.entry<K,V>> entrySet：存放具体元素的值。**
 
 > ## 2.基本方法 ##
 
@@ -103,7 +117,7 @@ comments: true
     	this.threshold = tableSizeFor(initialCapacity);
    	}
 
-**class Node<K,V>实现了Map.Entry<K,V>接口，即实现了如下一些基本函数。**
+**class Node<K,V>是HashMap的一个内部类，实现了Map.Entry<K,V>接口。**
 
     static class Node<K,V> implements Map.Entry<K,V> {
     	final int hash;
@@ -149,7 +163,32 @@ comments: true
 
 **HashMap其实就是一个Entry（Node）数组，Entry对象中包含了键和值，其中next也是一个Entry对象，它就是用来处理hash冲突的，形成一个链表。**
 
-**2.hashMap.put("1","string1");**
+**2.红黑树**
+    
+    //红黑树
+    static final class TreeNode<k,v> extends LinkedHashMap.Entry<k,v> {
+    	TreeNode<k,v> parent;  // 父节点
+    	TreeNode<k,v> left; //左子树
+    	TreeNode<k,v> right;//右子树
+    	TreeNode<k,v> prev;// needed to unlink next upon deletion
+    	boolean red;//颜色属性
+    	TreeNode(int hash, K key, V val, Node<k,v> next) {
+    		super(hash, key, val, next);
+    	}
+     
+    	//返回当前节点的根节点
+		final TreeNode<k,v> root() {
+    		for (TreeNode<k,v> r = this, p;;) {
+				if ((p = r.parent) == null)
+    				return r;
+				r = p;
+    		}
+    	}
+    }
+
+**红黑树比链表多了四个变量，parent父节点、left左节点、right右节点、prev上一个同级节点。**
+
+**3.hashMap.put("1","string1");**
 
     public V put(K key, V value) {
     	return putVal(hash(key), key, value, false, true);
@@ -159,37 +198,45 @@ comments: true
 
 **对于一个key，如果hashCode不同，equals一定为false，如果hashCode相同，equals不一定为true。**
 
-**所以理论上，hashCode可能存在冲突，这种情况也叫发生了碰撞。当碰撞发生时，计算出的bucketIndex是相同的，这时会取到bucketIndex位置已存储的元素，最终通过equals来比较，equals方法就是哈希码碰撞时才会执行的方法，所以说HashMap很少会用到equals。HashMap通过hashCode和equals最终判断出K是否已存在，如果已存在，则使用新V值替换旧V值，并返回旧V值，如果不存在 ，则存放新的键值对<K, V>到bucketIndex位置。**
-
 ![](https://tech.meituan.com/img/java-hashmap/hashMap%20put%e6%96%b9%e6%b3%95%e6%89%a7%e8%a1%8c%e6%b5%81%e7%a8%8b%e5%9b%be.png)
 
     final V putVal(int hash, K key, V value, boolean onlyIfAbsent,boolean evict) {
     	Node<K,V>[] tab; 
 		Node<K,V> p; 
 		int n, i;
+		//若table未初始化或长度为0，则进行扩容
     	if ((tab = table) == null || (n = tab.length) == 0)
     		n = (tab = resize()).length;
+		//计算index,并对null做处理
+		//(n - 1) & hash确定元素存放的位置，桶为空，则将结点放入桶中
     	if ((p = tab[i = (n - 1) & hash]) == null)
     		tab[i] = newNode(hash, key, value, null);
-    	else {
+    	//桶中已经存在元素
+		else {
     		Node<K,V> e; K k;
+			//比较桶中第一个节点的hash值和key值，若相等则覆盖
     		if (p.hash == hash && ((k = p.key) == key || (key != null && key.equals(k))))
-    			e = p;
-    		else if (p instanceof TreeNode)
+    			e = p;//将第一个元素赋值给e，用e来记录
+    		else if (p instanceof TreeNode)//判断该链是否为红黑树
     			e = ((TreeNode<K,V>)p).putTreeVal(this, tab, hash, key, value); 
-    		else {
+    		else {//该链为链表
+				//在链表最末插入结点
     			for (int binCount = 0; ; ++binCount) {
+					//到达链表的尾部
     				if ((e = p.next) == null) {
     					p.next = newNode(hash, key, value, null);
+						如果结点数达到阈值，转换为红黑树
 						if (binCount >= TREEIFY_THRESHOLD - 1) // -1 for 1st
     					treeifyBin(tab, hash);
     					break;
     				}
+					//判断链表中结点的key值与插入元素的key值是否相等
     				if (e.hash == hash && ((k = e.key) == key || (key != null && key.equals(k))))
     					break;
     				p = e;
     			}
     		}
+			//表示在桶中找到key值和hash值与插入元素相等的结点
     		if (e != null) { // existing mapping for key
     			V oldValue = e.value;
     			if (!onlyIfAbsent || oldValue == null)
@@ -199,10 +246,21 @@ comments: true
     		}
     	}
 		++modCount;//修改次数+1
+		//超过阈值则扩容
     	if (++size > threshold)
     		resize();
     	afterNodeInsertion(evict);
     	return null;
     }
     
-**...未完待续**
+**数据存储实现原理流程小结：**
+
+**根据key计算得到key.hash = (h = k.hashCode()) ^ (h >>> 16)；**
+
+**根据key.hash计算得到桶数组的索引index = key.hash & (table.length - 1)，这样就找到该key的存放位置了：**
+
+**① 如果该位置没有数据，用该数据新生成一个节点保存新数据，返回null；**
+
+**② 如果该位置有数据是一个红黑树，那么执行相应的插入 / 更新操作；**
+
+**③ 如果该位置有数据是一个链表，分两种情况一是该链表没有这个节点，另一个是该链表上有这个节点，注意这里判断的依据是key.hash是否一样：如果该链表没有这个节点，那么采用尾插法新增节点保存新数据，返回null；如果该链表已经有这个节点了，那么找到该节点并更新新数据，返回老数据。**
