--- a/_posts/2018-08-27-post4.md
+++ b/_posts/2018-08-27-post4.md
@@ -15,11 +15,11 @@ comments: true
 
 **HashMap由数组+链表组成，数组是HashMap的主体，当添加一个元素时，通过key计算hash值，并确定插入数组中的位置。如果插入的位置已经有元素存在，则通过equals方法进一步判断，若返回true则覆盖该位置上的Node，若返回false则添加到该元素的后面形成了链表。当链表长度太长时，链表就转换为红黑树，这样大大提高了查找的效率。**
 
-![](https://images2015.cnblogs.com/blog/1024555/201611/1024555-20161113235348670-746615111.png)
-
 **JDK 1.8 以前的HashMapd的实现是数组+链表，即使哈希函数取得再好，也很难达到元素百分百均匀分布。针对这种情况，JDK 1.8 引入了红黑树（查找时间复杂度为O(logn)）来优化这个问题，当同一个hash值的节点数不小于8时，不再采用单链表形式存储，而是采用红黑树的存储形式。**
 
-![](https://images2015.cnblogs.com/blog/249993/201707/249993-20170725102326906-1051203702.png)
+![](https://images2015.cnblogs.com/blog/616953/201603/616953-20160304192851940-1880633940.png)
+
+![](https://tech.meituan.com/img/java-hashmap/hashMap%e5%86%85%e5%ad%98%e7%bb%93%e6%9e%84%e5%9b%be.png)
 
 **类的数据成员：**
 
@@ -188,6 +188,42 @@ comments: true
 
 **红黑树比链表多了四个变量，parent父节点、left左节点、right右节点、prev上一个同级节点。**
 
+**桶的树形化：**
+
+**(1)根据哈希表中元素个数确定是扩容还是树形化；**
+
+**(2)如果是树形化遍历桶中的元素，创建相同个数的树形节点，复制内容，建立起联系；**
+
+**(3)然后让桶第一个元素指向新建的树头结点，替换桶的链表内容为树形内容。**
+	
+	//将桶内所有的链表结点替换成红黑树结点
+    final void treeifyBin(Node<K,V>[] tab, int hash) {
+    	int n, index;
+		Node<K,V> e;
+		//如果当前哈希表为空，或者哈希表中元素的个数小于 进行树形化的阈值(默认为64)，就去新建/扩容
+    	if (tab == null || (n = tab.length) < MIN_TREEIFY_CAPACITY)
+    		resize();
+		else if ((e = tab[index = (n - 1) & hash]) != null) {
+			//如果哈希表中的元素个数超过了树形化阈值，进行树形化
+			//e是哈希表中指定位置桶里的链表结点，从第一个开始
+    		TreeNode<K,V> hd = null, tl = null;//红黑树的头、尾结点
+    		do {
+				//新建一个树形结点，内容和当前链表结点e一致
+    			TreeNode<K,V> p = replacementTreeNode(e, null);
+    			if (tl == null)//确定树头结点
+    				hd = p;
+    			else {
+    				p.prev = tl;
+    				tl.next = p;
+    			}
+    			tl = p;
+    		} while ((e = e.next) != null);
+			//让桶的第一个元素指向新建的红黑树头结点，以后这个桶里的元素就是红黑树而不是链表了
+    		if ((tab[index] = hd) != null)
+    			hd.treeify(tab);
+    	}
+    }
+
 **3.hashMap.put("1","string1");**
 
     public V put(K key, V value) {
@@ -264,3 +300,36 @@ comments: true
 **② 如果该位置有数据是一个红黑树，那么执行相应的插入 / 更新操作；**
 
 **③ 如果该位置有数据是一个链表，分两种情况一是该链表没有这个节点，另一个是该链表上有这个节点，注意这里判断的依据是key.hash是否一样：如果该链表没有这个节点，那么采用尾插法新增节点保存新数据，返回null；如果该链表已经有这个节点了，那么找到该节点并更新新数据，返回老数据。**
+
+**4.hashMap.get("1");**
+
+    final Node<K,V> getNode(int hash, Object key) {
+    	Node<K,V>[] tab; 
+		Node<K,V> first, e; 
+		int n; 
+		K k;
+    	// table已经初始化，长度大于0，根据hash寻找table中的项也不为空
+    	if ((tab = table) != null && (n = tab.length) > 0 &&
+    		(first = tab[(n - 1) & hash]) != null) {
+    		// 桶中第一项(数组元素)相等
+			if (first.hash == hash && // always check first node
+    			((k = first.key) == key || (key != null && key.equals(k))))
+    			return first;
+    		// 桶中不止一个结点
+    		if ((e = first.next) != null) {
+    		// 为红黑树结点
+    			if (first instanceof TreeNode)
+    			// 在红黑树中查找
+    				return ((TreeNode<K,V>)first).getTreeNode(hash, key);
+    			// 否则，在链表中查找
+    			do {
+    				if (e.hash == hash &&
+    					((k = e.key) == key || (key != null && key.equals(k))))
+    					return e;
+    			} while ((e = e.next) != null);
+    		}
+    	}
+    	return null;
+    }
+
+**说明：HashMap并没有直接提供getNode接口给用户调用，而是提供的get函数，而get函数就是通过getNode来取得元素的。**
