--- a/_posts/2018-11-26-post5.md
+++ b/_posts/2018-11-26-post5.md
@@ -1,4 +1,13 @@
-# 牛客网问答平台
+---
+
+layout: post
+title: "问答平台项目"
+excerpt: "Java+Redis"
+date: 2018-11-26
+tags: [Java]
+comments: true
+
+---
 
 **这个项目是以现在的知乎、牛客网这类问答平台为原型，基于springboot的SSM框架的Java web应用项目。数据库使用了redis和mysql，同时通过一个异步消息框架来实现事件的异步处理，并使用爬虫对网站进行数据填充。**
 
